enable_testing()

add_executable(run_test
    main.cpp
    geometry_test.cpp
    geolib_tests/geolib/binary_operations.cpp
    geolib_tests/geolib/buffer.cpp
    geolib_tests/geolib/contains_segment.cpp
    geolib_tests/geolib/convex_hull.cpp
    geolib_tests/geolib/point_index.cpp
    geolib_tests/geolib/segment_intersection.cpp
    geolib_tests/geolib/split.cpp
    geolib_tests/geolib/wkt.cpp)


add_test(NAME test_geometry_segment_point_dist_close_point COMMAND run_test test_geometry_segment_point_dist_close_point)
add_test(NAME test_geometry_segment_point_dist_far_point COMMAND run_test test_geometry_segment_point_dist_far_point)
add_test(NAME test_geometry_segment_point_dist_point_on_segment COMMAND run_test test_geometry_segment_point_dist_point_on_segment)
add_test(NAME test_geometry_segment_point_dist_zero_len_segment COMMAND run_test test_geometry_segment_point_dist_zero_len_segment)

add_test(NAME test_geolib_segment_intersection_1 COMMAND run_test test_geolib_segment_intersection_1)
add_test(NAME test_geolib_segment_intersection_2 COMMAND run_test test_geolib_segment_intersection_2)
add_test(NAME test_geolib_segment_intersection_3 COMMAND run_test test_geolib_segment_intersection_3)
add_test(NAME test_geolib_segment_intersection_4 COMMAND run_test test_geolib_segment_intersection_4)
add_test(NAME test_geolib_segment_intersection_5 COMMAND run_test test_geolib_segment_intersection_5)
add_test(NAME test_geolib_segment_intersection_6 COMMAND run_test test_geolib_segment_intersection_6)
add_test(NAME test_geolib_segment_intersection_7 COMMAND run_test test_geolib_segment_intersection_7)
add_test(NAME test_geolib_segment_intersection_8 COMMAND run_test test_geolib_segment_intersection_8)
add_test(NAME test_geolib_segment_intersection_9 COMMAND run_test test_geolib_segment_intersection_9)
add_test(NAME test_geolib_segment_intersection_10 COMMAND run_test test_geolib_segment_intersection_10)
add_test(NAME test_geolib_segment_intersection_11 COMMAND run_test test_geolib_segment_intersection_11)
add_test(NAME test_geolib_segment_intersection_12 COMMAND run_test test_geolib_segment_intersection_12)

add_test(NAME test_geolib_read_wkt_point COMMAND run_test test_geolib_read_wkt_point)
add_test(NAME test_geolib_read_wkt_segment COMMAND run_test test_geolib_read_wkt_segment)
add_test(NAME test_geolib_read_wkt_ring COMMAND run_test test_geolib_read_wkt_ring)
add_test(NAME test_geolib_read_wkt_polygon COMMAND run_test test_geolib_read_wkt_polygon)
add_test(NAME test_geolib_read_wkt_multipolygon COMMAND run_test test_geolib_read_wkt_multipolygon)

add_test(NAME test_geolib_convex_hull_1 COMMAND run_test test_geolib_convex_hull_1)

add_test(NAME test_geolib_point_index_1 COMMAND run_test test_geolib_point_index_1)
add_test(NAME test_geolib_point_index_2 COMMAND run_test test_geolib_point_index_2)
add_test(NAME test_geolib_point_index_3 COMMAND run_test test_geolib_point_index_3)
add_test(NAME test_geolib_point_index_4 COMMAND run_test test_geolib_point_index_4)
add_test(NAME test_geolib_point_index_5 COMMAND run_test test_geolib_point_index_5)
add_test(NAME test_geolib_point_index_6 COMMAND run_test test_geolib_point_index_6)
add_test(NAME test_geolib_point_index_7 COMMAND run_test test_geolib_point_index_7)
add_test(NAME test_geolib_point_index_8 COMMAND run_test test_geolib_point_index_8)
add_test(NAME test_geolib_point_index_9 COMMAND run_test test_geolib_point_index_9)

add_test(NAME test_geolib_contains_segment_1 COMMAND run_test test_geolib_contains_segment_1)
add_test(NAME test_geolib_contains_segment_2 COMMAND run_test test_geolib_contains_segment_2)
add_test(NAME test_geolib_contains_segment_3 COMMAND run_test test_geolib_contains_segment_3)
add_test(NAME test_geolib_contains_segment_4 COMMAND run_test test_geolib_contains_segment_4)
add_test(NAME test_geolib_contains_segment_5 COMMAND run_test test_geolib_contains_segment_5)
add_test(NAME test_geolib_contains_segment_6 COMMAND run_test test_geolib_contains_segment_6)

add_test(NAME test_geolib_union_1 COMMAND run_test test_geolib_union_1)
add_test(NAME test_geolib_union_2 COMMAND run_test test_geolib_union_2)
add_test(NAME test_geolib_union_3 COMMAND run_test test_geolib_union_3)
add_test(NAME test_geolib_union_4 COMMAND run_test test_geolib_union_4)
add_test(NAME test_geolib_union_5 COMMAND run_test test_geolib_union_5)
add_test(NAME test_geolib_union_6_extra COMMAND run_test test_geolib_union_6_extra)
add_test(NAME test_geolib_union_7_extra COMMAND run_test test_geolib_union_6_extra)

add_test(NAME test_geolib_intersection_1 COMMAND run_test test_geolib_intersection_1)
add_test(NAME test_geolib_intersection_2 COMMAND run_test test_geolib_intersection_2)
add_test(NAME test_geolib_intersection_3 COMMAND run_test test_geolib_intersection_3)
add_test(NAME test_geolib_intersection_4 COMMAND run_test test_geolib_intersection_4)
add_test(NAME test_geolib_intersection_5 COMMAND run_test test_geolib_intersection_5)

add_test(NAME test_geolib_difference_1 COMMAND run_test test_geolib_difference_1)
add_test(NAME test_geolib_difference_2 COMMAND run_test test_geolib_difference_2)
add_test(NAME test_geolib_difference_3 COMMAND run_test test_geolib_difference_3)
add_test(NAME test_geolib_difference_4 COMMAND run_test test_geolib_difference_4)
add_test(NAME test_geolib_difference_5 COMMAND run_test test_geolib_difference_5)

add_test(NAME test_geolib_split_metropolis_1 COMMAND run_test test_geolib_split_metropolis_1)
add_test(NAME test_geolib_split_metropolis_2 COMMAND run_test test_geolib_split_metropolis_2)
add_test(NAME test_geolib_split_metropolis_3 COMMAND run_test test_geolib_split_metropolis_3)
add_test(NAME test_geolib_split_afimoll_1 COMMAND run_test test_geolib_split_afimoll_1)
add_test(NAME test_geolib_split_afimoll_2 COMMAND run_test test_geolib_split_afimoll_2)
add_test(NAME test_geolib_split_afimoll_3 COMMAND run_test test_geolib_split_afimoll_3)
add_test(NAME test_geolib_split_afimoll_4 COMMAND run_test test_geolib_split_afimoll_4)
add_test(NAME test_geolib_split_afimoll_5 COMMAND run_test test_geolib_split_afimoll_5)
add_test(NAME test_geolib_split_evropeiskyi_U1 COMMAND run_test test_geolib_split_evropeiskyi_U1)
add_test(NAME test_geolib_split_evropeiskyi_1 COMMAND run_test test_geolib_split_evropeiskyi_1)
add_test(NAME test_geolib_split_evropeiskyi_2 COMMAND run_test test_geolib_split_evropeiskyi_2)
add_test(NAME test_geolib_split_evropeiskyi_3 COMMAND run_test test_geolib_split_evropeiskyi_3)
add_test(NAME test_geolib_split_evropeiskyi_4 COMMAND run_test test_geolib_split_evropeiskyi_4)
add_test(NAME test_geolib_split_dubai_mall_1 COMMAND run_test test_geolib_split_dubai_mall_1)
add_test(NAME test_geolib_split_dubai_mall_2 COMMAND run_test test_geolib_split_dubai_mall_2)
add_test(NAME test_geolib_split_dubai_mall_3 COMMAND run_test test_geolib_split_dubai_mall_3)
add_test(NAME test_geolib_split_dubai_mall_4 COMMAND run_test test_geolib_split_dubai_mall_4)
add_test(NAME test_geolib_split_dubai_mall_G COMMAND run_test test_geolib_split_dubai_mall_G)
add_test(NAME test_geolib_split_dubai_mall_L COMMAND run_test test_geolib_split_dubai_mall_L)
add_test(NAME test_geolib_split_dubai_mall_LG COMMAND run_test test_geolib_split_dubai_mall_LG)

add_test(NAME test_geolib_buffer_1 COMMAND run_test test_geolib_buffer_1)
add_test(NAME test_geolib_buffer_2 COMMAND run_test test_geolib_buffer_2)
add_test(NAME test_geolib_buffer_3 COMMAND run_test test_geolib_buffer_3)
add_test(NAME test_geolib_buffer_4 COMMAND run_test test_geolib_buffer_4)
add_test(NAME test_geolib_buffer_5 COMMAND run_test test_geolib_buffer_5)
add_test(NAME test_geolib_buffer_6 COMMAND run_test test_geolib_buffer_6)

add_test(NAME test_geolib_buffer_metropolis_1 COMMAND run_test test_geolib_buffer_metropolis_1)
add_test(NAME test_geolib_buffer_metropolis_2 COMMAND run_test test_geolib_buffer_metropolis_2)
add_test(NAME test_geolib_buffer_metropolis_3 COMMAND run_test test_geolib_buffer_metropolis_3)
add_test(NAME test_geolib_buffer_afimoll_1 COMMAND run_test test_geolib_buffer_afimoll_1)
add_test(NAME test_geolib_buffer_afimoll_2 COMMAND run_test test_geolib_buffer_afimoll_2)
add_test(NAME test_geolib_buffer_afimoll_3 COMMAND run_test test_geolib_buffer_afimoll_3)
add_test(NAME test_geolib_buffer_afimoll_4 COMMAND run_test test_geolib_buffer_afimoll_4)
add_test(NAME test_geolib_buffer_afimoll_5 COMMAND run_test test_geolib_buffer_afimoll_5)
add_test(NAME test_geolib_buffer_evropeiskyi_U1 COMMAND run_test test_geolib_buffer_evropeiskyi_U1)
add_test(NAME test_geolib_buffer_evropeiskyi_1 COMMAND run_test test_geolib_buffer_evropeiskyi_1)
add_test(NAME test_geolib_buffer_evropeiskyi_2 COMMAND run_test test_geolib_buffer_evropeiskyi_2)
add_test(NAME test_geolib_buffer_evropeiskyi_3 COMMAND run_test test_geolib_buffer_evropeiskyi_3)
add_test(NAME test_geolib_buffer_evropeiskyi_4 COMMAND run_test test_geolib_buffer_evropeiskyi_4)
add_test(NAME test_geolib_buffer_dubai_mall_1 COMMAND run_test test_geolib_buffer_dubai_mall_1)
add_test(NAME test_geolib_buffer_dubai_mall_2 COMMAND run_test test_geolib_buffer_dubai_mall_2)
add_test(NAME test_geolib_buffer_dubai_mall_3 COMMAND run_test test_geolib_buffer_dubai_mall_3)
add_test(NAME test_geolib_buffer_dubai_mall_4 COMMAND run_test test_geolib_buffer_dubai_mall_4)
add_test(NAME test_geolib_buffer_dubai_mall_G COMMAND run_test test_geolib_buffer_dubai_mall_G)
add_test(NAME test_geolib_buffer_dubai_mall_L COMMAND run_test test_geolib_buffer_dubai_mall_L)
add_test(NAME test_geolib_buffer_dubai_mall_LG COMMAND run_test test_geolib_buffer_dubai_mall_LG)

target_link_libraries(run_test geometry)
